[#14] Maybe fixed quick jump box

--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -253,7 +253,7 @@ div.flash.error, #errorExplanation ul{
 .ui-datepicker table .ui-datepicker-week-col{
   padding-left: 20px;
 }
-#s2id_project_quick_jump_box{
+#s2id_project_quick_jump_box, #project_quick_jump_box{
   position: fixed;
   top: 10px;
   right: 10px;
